[package]
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
name = "turnierserver"
version = "0.1.0"

[dependencies]
base64 = "0.4.0"
dotenv = "0.8.0"
rocket = "0.2.0"
rocket_codegen = "0.2.0"
rustyline = "1.0.0"
serde = "0.9.7"
serde_derive = "0.9.7"
serde_json = "0.9.5"

[dependencies.diesel]
features = ["postgres", "uuid"]
version = "0.10.1"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.10.1"

[dependencies.juniper]
features = ["serde"]
git = "https://github.com/Mrmaxmeier/juniper"

[dependencies.rocket_contrib]
features = ["templates", "json", "serde", "handlebars_templates"]
version = "0.2.0"

[dependencies.uuid]
features = ["v4"]
version = "0.4.0"
